--- a/minecraft/style.css
+++ b/minecraft/style.css
@@ -4,3 +4,29 @@ body {
     justify-content: center;
     flex-direction: column;
 }
+p {
+   font-size: 30px;
+   width: 80%; 
+   text-align: justify;
+}
+@media (max-width: 768px) {
+
+ h1 {
+    font-size: 40px;
+ }
+
+ h2 {
+    font-size: 24px;
+ }
+
+ p {
+    font-size: 24px;
+        width: 90%;
+ }
+ footer {
+   font-size: 30px;
+   text-align: center;
+
+}
+}
+
