--- a/minecraft/style.css
+++ b/minecraft/style.css
@@ -10,7 +10,7 @@ p {
    text-align: justify;
 }
 footer{
-   background-color: yellow;
+   background-color: rgb(255, 0, 0);
    font-size: 40px;
    width: 100%;
    text-align: center;
