--- a/pokémon cartas/stayle2.css
+++ b/pokémon cartas/stayle2.css
@@ -2,3 +2,10 @@ body, header {
     background-color: black;
     color: white;
 }
+div {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
