--- a/pokémon cartas/stayle2.css
+++ b/pokémon cartas/stayle2.css
@@ -93,6 +93,12 @@ hr{
     width: 10%;
     margin-left: 3%;
 }
+
+#img_apoiador{
+    width: 14%;
+    margin-left: 1%;
+}
+
 .deck1, .deck2, .deck3, .deck4, .deck5, .deck6{
     display: flex;
     flex-direction: row;
@@ -115,6 +121,57 @@ img {
     justify-content: center;
     justify-items: center;
     align-items: center;
+}
+
+#tapete_jogo{
+    width: 50%;
+    height: 60%;
+}
+
+.main h1{
+    text-align: justify;
+    font-size: 30px;
+    text-shadow: 1px 1px 3px rgb(255, 222, 75);
+}
+
+.estrutura_deck {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    justify-items: center;
+
+}
+
+.estrutura{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+
+.margin {
+    margin: 20px;
+}
+
+#img_est_magmar , #img_est_energia, #img_est_item, #img_est_estadio {
+    height: 200px;
+    width: 150px;
+}
+
+#img_est_estadio{
+    margin-left: 20%;
+}
+div img{
+    width: 80px;
+    box-shadow: 2px 2px 6px rgb(255, 242, 0);
+}
+div{
+    margin: 20px;
+}
+#img_est_apoiador{
+    height: 200px;
+    width: 190px;
 }
 @media (max-width: 768px) {
     body, header{
