--- a/pokémon cartas/stayle2.css
+++ b/pokémon cartas/stayle2.css
@@ -173,6 +173,14 @@ div{
     height: 200px;
     width: 190px;
 }
+footer{
+    display: flex;
+    justify-content: center;
+    color: #eeeded;
+    margin-top: 50px;
+    background-color: #c72626;
+    font-size: 30px;
+}
 @media (max-width: 768px) {
     body, header{
         align-content: center;
